--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
-requests
-telebot
-pydub
-openai
-Flask==2.0.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.6.2
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+ffmpeg==1.4
+Flask==2.3.2
+frozenlist==1.3.3
+h11==0.14.0
+httpcore==0.17.2
+httpx==0.24.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+multidict==6.0.4
+openai==0.27.7
+opuslib==3.0.1
+pydub==0.25.1
+pyTelegramBotAPI==4.12.0
+python-telegram-bot==20.3
+requests==2.31.0
+sniffio==1.3.0
+tqdm==4.65.0
+urllib3==2.0.2
+Wave==0.0.2
+Werkzeug==2.3.4
+yarl==1.9.2
